<resources>
    <string name="app_name">TikTok Downloader</string>
    <string name="title_main">TikTok Downloader</string>
    <string name="subtitle_main">Скачивание видео без водяных знаков</string>
    <string name="hint_enter_url">Ссылка на видео TikTok</string>
    <string name="btn_paste">Вставить</string>
    <string name="btn_clear">Очистить</string>
    <string name="btn_download">Скачать видео</string>
    <string name="btn_open_gallery">В галерею</string>
    <string name="btn_share">Поделиться</string>
    <string name="theme_title">Тема приложения</string>
    <string name="theme_auto">Авто</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_light">Светлая</string>
    <string name="status_ready">Вставьте ссылку, чтобы скачать видео</string>
    <string name="status_fetching_info">Получение информации о видео...</string>
    <string name="status_downloading">Скачивание видео без водяного знака...</string>
    <string name="status_success">Видео скачано и сохранено в «Загрузки»!</string>
    <string name="error_invalid_url">Введите корректную ссылку на видео TikTok</string>
    <string name="error_fetch_failed">Не удалось получить прямое видео без знака</string>
    <string name="error_download_failed">Ошибка при скачивании файла</string>
    <string name="permission_denied">Для сохранения требуется доступ к хранилищу</string>
</resources>
